# axol

./: .pre-commit-config.yaml  AGENTS.md  QUICKSTART.md  README.md  pyproject.toml
almond_axol/: __main__.py  pico_bridge.py  shared.py  sudo.py
almond_axol/cli/: __init__.py  collect_data.py  config.py  gravity_comp.py  pico_bridge.py  run_policy.py  serve.py  teleop.py
almond_axol/cli/can/: driver.py  setup.py
almond_axol/kinematics/: solver.py
almond_axol/lerobot/: rollout.py
almond_axol/motor/: __init__.py  motor.py
almond_axol/robot/: __init__.py  axol.py  config.py  gravity.py  sim.py
almond_axol/serve/: __init__.py  app.py  commands.py  introspect.py  manager.py  netdetect.py  orchestrator.py  robot_link.py  runner.py  update.py
almond_axol/teleop/: config.py  teleop.py  trajectory.py  worker.py
almond_axol/test/: gripper.py  home.py
almond_axol/utils/: __init__.py  certs.py  shared.py  sudo.py
almond_axol/vr/: server.py  video.py
almond_axol/zed/: __init__.py  config.py  daemon.py  streamer.py
docs/: docs.json  index.mdx  installation.mdx
docs/api/: concepts.mdx  lerobot.mdx  robot.mdx  teleop.mdx  vr.mdx  zed.mdx
docs/cli/: can-driver.mdx  can-setup.mdx  collect-data.mdx  run-policy.mdx  serve.mdx  teleop.mdx  zed-stream.mdx  zed-sync-clocks.mdx
docs/guides/: control-panel.mdx  vr-interface.mdx
docs/quickstart/: data-collection.mdx  inference.mdx  teleop.mdx
tools/: pico_to_axol_vr.py
web/: .gitignore  LICENSE  README.md  package-lock.json  package.json  vercel.json
web/app/: index.html  package.json  vite.config.ts
(+45 files in other folders)
